--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
+			let cnt=1,ui=arr[0];
+    for(let i=1;i<arr.length;i++){
+        if(arr[i]!=ui){
+            cnt++;
+            ui=arr[i];
+        }
+    }
+    if(arr.length<2 || cnt==1)
+        return -Infinity;
+    else{
+        let fm=-2147483648 ,sm=-2147483648 ;
+        for(let i=0;i<arr.length;i++){
+            let d = arr[i];
+            if(d>=fm){
+                sm=fm;
+                fm=d;
+            }
+            else if(d>sm)
+                sm=d;
+        }
+        if(sm==-2147483648)
+            return -Infinity;
+        return sm;
+    }
 			
 		}
 
